# swai

./: Cargo.toml  LICENSE  README.md
bytereader/: Cargo.toml
bytereader/src/: lib.rs
crates/bytereader/src/: lib.rs
crates/swai-parser/: Cargo.toml
crates/swai-parser/src/: error.rs  instructions.rs  leb128.rs  lib.rs  sections.rs  types.rs  wasm.rs
crates/swai-parser/src/wasm/: sections.rs  types.rs
src/: error.rs  interpreter.rs  lib.rs  main.rs  wasm.rs  wasm_parsers.rs
src/wasm/: Sections.rs  Types.rs
src/wasm/Sections/: Code.rs
swai-parser/: Cargo.toml
swai-parser/src/: error.rs  leb128.rs  wasm.rs
swai-parser/src/wasm/: Sections.rs  Types.rs  module.rs
tests/: add.wasm  add.wat  asc_test.wasm  asc_test.wat  helloworld.wasm  helloworld.wat  index.html  memory.wasm  memory.wat  test.wasm  test.wat
