[workspace]
members = [
	"crates/bytereader",
	"crates/swai-parser"
]

[workspace.dependencies]
thiserror = "1.0.40"


[package]
name = "swai"
version = "0.0.1"
edition = "2021"
description = "A Simple WebAssembly Interpreter"

[dependencies]
thiserror = { workspace = true }
swai-parser = { path = "./crates/swai-parser" }
